# lrslib

./: .gitignore  CMakeLists.txt  QUICKSTART.txt  README  TODO.txt  checkpred.c  cube.ine  game_generator.py  hvref.c  inedel.c  lrs.c  lrsdriver.h  lrsgmp.h  lrslib.c  lrslib.h  lrslong.c  lrsmp.c  lrsmp.h  lrsnash.c  lrsrestart.h  mai20.supp  main-128.cc  main-gmp.cc  main-gmp1.cc  main-gmp2.cc  main-long.cc  main.c  main.cc  mp5.ext  mplrs.c  mplrs.h  setupnash2.c  test.py
ext/metric/: cp6.ext
ext/redund/: cube.ext  r100_5.ext  r2000_5.ext  r20_5.ext  r4000_5.ext  r500_5.ext
ext/test/: cube.ext  mp5.ext  vol1.ext
include/: lib-128.h  lib-gmp.h  lib-long.h  lib.h
ine/metric/: cert1.ine  cert2.ine  cp4.ine  cp6.ine  mp6.ine
ine/project/: bad.ine  center.c  mit.ine  mp5.ine  rc100-4.ieq  rc100-4.ine  rc100-5.ieq  rc1000-5.ine  rc20-5.ieq  rc20-5.ine  rc2000-5.ine  rc250-5.ieq  rc4000-5.ine  rc500-5.ine  tsp4.ext  tsp4.ine  tsp5.ext  tsp5.ine  tsp6.ext  tsp6.ine  tsp7.ext
ine/redund/: cube.ine  metric80_16.ine  mit.ine  mp5.ine  mp5b.ine  mp5c.ine  non_par.ine  par.ine  r100_5.ine  r2000_5.ine  r20_5.ine  r35_5.ine  r4000_5.ine  r500_5.ine
ine/test/: cp4.ine  cube.ine  ep.ine  left.ine  mit.ine  mp5.ine  right.ine
ine/test-072/: zcp6.ine
ine/test-072/cp6/: cp6.ext  cp6.ine
man/man1/: checkpred.1  lrs.1  lrsnash.1  mplrs.1  redund.1
man/man5/: lrsarith.5  lrslib.5  lrsscripts.5
scripts/: mfel  mlrs  plotL  plotR  plotV  projred
src/: lib-128.c  lib-gmp.c  lib-gmp.h  lib-long.c  lib.c  lib.h  lrs.c  lrsdriver.c  lrsdriver.h  lrsgmp.c  lrsgmp.h  lrslib.c  lrslib.h  lrslong.c  lrslong.h  lrsmp.c  lrsmp.h  lrsnashgmp.c  lrsnashlib.c  lrsnashlib.h  lrsnashsurskit.c  makefile  nashdemo.c  setupnash.c  solve.c  solve.h
